javacc/src/main/java/example4/Example4.jj
options {
  LOOKAHEAD = 1;
  CHOICE_AMBIGUITY_CHECK = 2;
  OTHER_AMBIGUITY_CHECK = 1;
  STATIC = true;
  DEBUG_PARSER = false;
  DEBUG_LOOKAHEAD = false;
  DEBUG_TOKEN_MANAGER = false;
  ERROR_REPORTING = true;
  JAVA_UNICODE_ESCAPE = false;
  UNICODE_INPUT = false;
  IGNORE_CASE = false;
  USER_TOKEN_MANAGER = false;
  USER_CHAR_STREAM = false;
  BUILD_PARSER = true;
  BUILD_TOKEN_MANAGER = true;
  SANITY_CHECK = true;
  FORCE_LA_CHECK = false;
}

PARSER_BEGIN(Example4)
package example4;
/**
 * Simple brace matcher.
 */

public class Example4 {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    Example4 parser = new Example4(System.in);
    parser.Input();
  }

}

PARSER_END(Example4)
SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
}

TOKEN :
{
  <LBRACE: "{">
| <RBRACE: "}">
}

/** Root production. */
void Input() :
{}
{
   MatchedBraces() <EOF>
}

/** Brace matching production. */
void MatchedBraces() :
{}
{
	<LBRACE> ( MatchedBraces())* <RBRACE>
}

